# substream-sdk

./: .gitignore  .railwayignore  ARCHITECTURE.md  DEMO_GUIDE.md  DEVELOPER_SETUP.md  IVS_BACKEND_SETUP.md  IVS_MIGRATION.md  IVS_SETUP.md  PRODUCTION_READY_SUMMARY.md  README.md  ROADMAP.md  SDK_INTEGRATION_GUIDE.md  SDK_STREAMING_GUIDE.md  TESTING_GUIDE.md  TESTING_NOW.md  WHIP_TESTING_GUIDE.md  nixpacks.toml  railway.json
.cursor/rules/: git-remotes.mdc
.github/workflows/: ci.yml  claude-review.yml  deploy-docs.yml  ios.yml
IVSBackend/: .gitignore  DEPLOYMENT.md  README.md  env.example.txt  eslint.config.mjs  next.config.mjs  next.config.ts  nixpacks.toml  package.json  pnpm-lock.yaml  prisma.config.ts  railpack.json  railway.toml  vercel.json
IVSBackend/prisma/: schema.prisma
IVSBackend/public/: embed.js
IVSBackend/scripts/: cleanup-ivs-realtime.ts  generate-og-assets.mjs  seed-test-data.ts  setup-ivs-realtime.ts
IVSBackend/src/: middleware.ts
IVSBackend/src/app/: globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
IVSBackend/src/app/demo/: page.tsx
IVSBackend/src/components/: HeroPlatformDemo.tsx  HighlightPipelineDemo.tsx  IvsRealTimeViewer.tsx  TwitchSiteDemo.tsx  VideoPlayer.tsx
IVSBackend/src/lib/: cors.ts  faqs.ts  logger.ts  prisma.ts  rate-limit.ts  redis.ts  validation.ts
IVSBackend/src/types/: ivs-web-broadcast.d.ts
UnityProject/Assets/: Stream test.inputsettings.asset  Stream-Settings.asset  Stream-test.unity  link.xml  stream.inputsettings.asset
UnityProject/Assets/Materials/: Blue.mat  Green.mat
UnityProject/Assets/Scripts/: IVSRealTimeStreamControl.cs  IVSStreamControl.cs  QuestlogToTMP.cs  RenderStreamControl.cs  RotateTwoAxis.cs
UnityProject/Assets/Settings/: PCVR_PipelineAsset.asset  PCVR_PipelineAsset_ForwardRenderer.asset  Quest_PipelineAsset.asset  UniversalRenderPipelineGlobalSettings.asset
UnityProject/Assets/XR/: XRGeneralSettingsPerBuildTarget.asset
UnityProject/Plugins/: README.md  setup_native.sh  verify-windows-deps.ps1
UnityProject/Plugins/Native/: CMakeLists.txt  build.sh  ffmpeg_rtmp_bridge.c  ffmpeg_rtmp_bridge.h  ffmpeg_rtmp_stub.c
UnityProject/Plugins/macOS/: libffmpeg_rtmp.dylib
UnityProject/ProjectSettings/: EditorBuildSettings.asset  EditorSettings.asset  GraphicsSettings.asset  ProjectSettings.asset  QualitySettings.asset
WebappBackend/: CREATE_ENV_FILE.md  QUICK_TEST.md  package-lock.json  package.json  tsconfig.json
WebappBackend/client/public/: index.html
WebappBackend/src/: server.ts  websocket.ts
WebappBackend/src/db/: supabase.ts
WebappBackend/src/middleware/: auth.ts  metrics.ts
WebappBackend/src/routes/: sessions.ts
WebappBackend/src/services/: notifications.ts  storage.ts
_archive/WebappBackend/: BOOKVID_PRODUCTION_CONFIG.md  CREATE_ENV_FILE.md  ENV_CONFIG.md
_archive/WebappBackend/database/: schema.sql
_archive/WebappBackend/src/: index.ts
_archive/docs-legacy/: BOOKVID_QUICK_START.md  COMPATIBILITY_FIXES.md  DEBUGGING_QUICK_START.md  IVS_MIGRATION.md  SDK_INTEGRATION_GUIDE.md  TESTING_GUIDE.md
_archive/docs-webrtc/: IMPLEMENTATION_STATUS.md  README.md  integration-example.md  livekit-migration-plan.md  production-checklist.md
_archive/legacy-streaming-services/: stream-realtime-service.ts
docs/: HIGH_QUALITY_RECORDING.md  IMPLEMENTATION_STATUS.md  LIVEKIT_TEST.md  PRODUCTION_DEPLOYMENT.md  SETUP_CHECKLIST.md  TURN_SERVER_SETUP.md  WEB_APP_INTEGRATION.md  data-channel-guide.md  deployment-guide.md  highlight-service-technical-overview.md  hybrid-unity-livekit-approach.md
docs-site/: docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
docs-site/docs/: api-reference.md  intro.md  monetization.md  quickstart-ios.md  quickstart-script-tags.md  quickstart-unity.md  quickstart-web.md  sdk-reference.md
docs-site/docs/concepts/: highlights.md  recordings.md  streams.md  viewer-embed.md  webhooks.md
docs-site/static/: CNAME
examples/web-game-demo/: README.md  index.html  substream.js
examples/web-viewer/: index.html
highlight-service/: .dockerignore  Dockerfile  README.md  config.py  main.py  nixpacks.toml  requirements.txt
highlight-service/api/: routes.py  schemas.py
highlight-service/pipeline/: assembly.py  audio_analysis.py  highlight_selection.py  orchestrator.py  quality_review.py  scene_analysis.py  segment_scoring.py
highlight-service/prompts/: game_battle_royale.txt  game_fps.txt  game_generic.txt  game_moba.txt  game_sports.txt  system_base.txt
highlight-service/services/: gcs_client.py  gemini_client.py  gemini_video_client.py  job_store.py  s3_client.py  video_intelligence.py
highlight-service/static/: index.html
highlight-service/tests/: test_pipeline.py  test_selection.py
highlight-service/training/: dataset.py  models.py  routes.py  tuner.py
scripts/: vercel-prod-setup.sh
(+103 files in other folders)
